# cpp-cmake-template

./: .clang-format  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/src/: template.cpp  template.h
tests/: CMakeLists.txt  templatetests.cpp
